compiler/testData/diagnostics/tests/dataClasses/dataClassNoName.kt
// RUN_PIPELINE_TILL: SOURCE
// FIR_IDENTICAL
// See EA-73584
data class<!SYNTAX!><!> {

}

// See KT-9296
<!WRONG_MODIFIER_TARGET!>data<!> interface<!SYNTAX!><!> {

}